@@ -1,7 +1,6 @@
 componentdir = $(libdir)/flumotion/python/flumotion/component
 component_PYTHON = \
 	__init__.py \
-	bouncer.py \
 	feedcomponent.py \
 	component.py
 
@@ -12,6 +11,7 @@ clean-local:
 
 SUBDIRS = \
 	base \
+	bouncers \
 	bttv \
 	dv \
 	file \
