@@ -1,0 +1,9 @@
+componentdir = $(libdir)/flumotion/python/flumotion/component/bouncers
+component_PYTHON = \
+	__init__.py \
+	bouncer.py
+
+TAGS_FILES = $(component_PYTHON)
+
+clean-local:
+	rm -rf *.pyc *.pyo
