@@ -1,6 +1,6 @@
 <components>
   <component type="bouncer">
-    <source location="flumotion.component.bouncer"/>
+    <source location="flumotion.component.bouncers.bouncer"/>
     <properties>
     </properties>
   </component>
